--- a/assets/style.css
+++ b/assets/style.css
@@ -188,6 +188,7 @@ body {
 }
 
 .btn {
+    margin: 2px;
     display: inline-block;
     font-size: 1rem;
     color: black;
@@ -227,6 +228,12 @@ table {
     padding-bottom: 0;
 }
 
+
+.card h4 {
+    margin-top: 0;
+}
+
+
 .bg-black {
     border: none;
     height: 2px;
@@ -242,4 +249,9 @@ table {
   padding: 10px;
   border-radius: 15px;
   box-shadow: 5px 5px 2px rgba(0, 0, 0, 0.5);
+}
+
+.link {
+    color: black;
+    text-decoration: none;
 }
